--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.27",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "final-form": "^4.20.1",
     "formik": "^2.2.6",
     "react": "^17.0.1",
@@ -20,6 +26,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "typescript": "^4.1.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
